math-core/tests/snapshots/conversion_test__overset_spacing.snap
---
source: math-core/tests/conversion_test.rs
expression: "x\\overset{!}{=}x"
---
<math>
    <mi>x</mi>
    <mover>
        <mo>=</mo>
        <mo>!</mo>
    </mover>
    <mi>x</mi>
</math>
