math-core/tests/snapshots/conversion_test__overset_with_prime.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\overset{!}{=}'x"
---
<math>
    <msup>
        <mover>
            <mo lspace="0">=</mo>
            <mo>!</mo>
        </mover>
        <mo>′</mo>
    </msup>
    <mi>x</mi>
</math>
