math-core/tests/snapshots/conversion_test__plus_after_bigr.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\bigr(+ x"
---
<math>
    <mo maxsize="1.2em" minsize="1.2em">(</mo>
    <mo>+</mo>
    <mi>x</mi>
</math>
