math-core/tests/snapshots/conversion_test__plus_after_equal.snap
---
source: math-core/tests/conversion_test.rs
expression: x = +4
---
<math>
    <mi>x</mi>
    <mo>=</mo>
    <mo lspace="0" rspace="0">+</mo>
    <mn>4</mn>
</math>
