math-core/tests/snapshots/conversion_test__plus_after_equal_subscript3.snap
---
source: math-core/tests/conversion_test.rs
expression: "x =_{2} + 4"
---
<math>
    <mi>x</mi>
    <msub>
        <mo>=</mo>
        <mn>2</mn>
    </msub>
    <mo lspace="0" rspace="0">+</mo>
    <mn>4</mn>
</math>
